[package]
name = "buttplug-websocket-connector-no-tokio-net"
version = "9.0.7"
license = "BSD-3-Clause"
authors = ["ash lea <example@thisismyactual.email>"]
description = "buttplug.io websocket connector without tokio/net dependency"
repository = "https://github.com/ashkitten/buttplug-websocket-connector-no-tokio-net"
readme = "README.md"
edition = "2021"

[dependencies]
buttplug = { version = "9.0.7", default-features = false, features = ["tokio-runtime", "serialize-json"] }
futures = "0.3.31"
rustls = { version = "0.23.25", default-features = false, features = ["ring"] }
tokio-tungstenite = { version = "0.26.2", default-features = false, features = ["rustls-tls-webpki-roots", "url", "handshake", "stream"] }
tokio = { version = "1.44.1", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
